# alt_fin

./: .env.example  .gitignore  README.md  demo.ipynb  pyproject.toml
scripts/: track_token.py
src/altfinance/: __init__.py  backtest.py  evaluator.py  token_transfer.py
src/python203/: __init__.py  backtest.py  evaluator.py
tests/: test_backtest.py  test_evaluator.py
token_contract/: hardhat.config.js
token_contract/contracts/: RewardToken.sol
token_contract/scripts/: deploy.js
