[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "altfinance"
version = "0.1.0"
description = "Tokenized reward system for financial backtesting — Master 203 Alternative Finance, Paris Dauphine-PSL"
authors = [
    {name = "Amandine Esteve", email = "amandine.esteve@dauphine.eu"},
    {name = "Edouard Lesbre",  email = "edouard.lesbre@dauphine.eu"},
    {name = "Benoit Faivre",   email = "benoit.faivre@dauphine.eu"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "pybacktestchain",
    "web3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
